# 2025-tts-playground

./: .gitignore  README.md  demo_coqui_xtts.py  demo_g2p.py  demo_kokoro.py  demo_kokoro_ts.py  demo_onnx_kokoro.py  hello.py  pyproject.toml
