[project]
name = "2025-tts-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coqui-tts==0.26.1",
    "kokoro==0.9.4",
    "kokoro-onnx>=0.4.9",
    "pip>=25.2",
    "ruff>=0.13.1",
    "soundfile>=0.13.1",
]
